# wgpu_learn

./: .gitignore  Cargo.toml
src/: camera.rs  framepace.rs  gizmo.rs  gridzmo.rs  input.rs  lib.rs  livemouse.rs  main.rs  shader.wgsl  state.rs  text.rs  trie.rs  vertex.rs  voxel_fog.rs
src/animation/: animator.rs  animtimer.rs  mod.rs  tween.rs
src/math/: average.rs  mod.rs  ray.rs  transform.rs
src/modeling/: mod.rs  modeler.rs
src/rendering/: camera.rs  mod.rs  raytrace.rs  render_texture.rs  reticle.rs  skybox.rs  texture_array.rs  transforms.rs  velvet.rs
src/shaders/: easing.wgsl  grid.wgsl  precompute_rays.wgsl  raytrace.wgsl  raytrace_result_render.wgsl  reticle.wgsl  skybox.wgsl  skybox2.wgsl  voxel.wgsl
src/timing/: count_trigger.rs  mod.rs
src/voxel/: mesh.rs  vertex.rs
