[package]
name = "wgpu_learn"
version = "0.1.0"
edition = "2021"

# [env]
# RUST_BACKTRACE = "FULL"

[dependencies]
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
# wgpu = "0.19.3"
image = "0.25.1"
pollster = { version = "0.3.0", features = ["macro"]}
bytemuck = { version = "1.20.0", features = ["derive"] }
spin_sleep = "1.3.0"
glam = { version = "0.30.0", features = ["bytemuck", "serde"] }
thiserror = "2.0.11"
glyphon = "0.8.0"
wgpu = "24.0.1"
# vello = "0.4.1"

[profile.dev]
opt-level = 3
debug = true
